# stegosavr

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
extensions/chrome/: Dockerfile  build.sh  manifest.json  package.json  popup.html  tsconfig.json  vite.config.ts
extensions/chrome/src/: clipboard.ts  crypto.ts  main.ts  random.ts  storage.ts  styles.css
extensions/chrome/src/mnemonic/: grammar-codec.ts  solemn-kit-ru.ts  token-grid-codec.ts  token-grid.ts
extensions/chrome/src/styled/: chunked-grammar.ts  codecs.ts  envelope.ts  grand-chronicle.ts
public/: manifest.webmanifest  sw.js
src/: App.test.tsx  App.tsx  canvas-caption.ts  clipboard.ts  counter.test.ts  counter.ts  crypto-stego.test.ts  crypto.test.ts  crypto.ts  gallery-images.ts  main.ts  main.tsx  random.test.ts  service-worker.test.ts  service-worker.ts  storage.test.ts  storage.ts  styles.css
src/mnemonic/: birthday-toast-ru.ts  codecs.ts  dictionaries.test.ts  dictionaries.ts  grammar-theme.ts  life-wish-ru.ts  payload.ts  public-key.test.ts  public-key.ts  raw-codec.ts  raw-key.ts
src/styled/: envelope.test.ts  messages.test.ts  messages.ts
wasm-crypto/: Cargo.toml
wasm-crypto/src/: lib.rs  stego.rs
