[package]
name = "stegosavr_crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
hkdf = "0.12"
pbkdf2 = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
wasm-bindgen = "0.2"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
